<resources>
    <string name="app_name" translatable="false">Stay In Touch</string>
    <string name="sign_in">Sign in</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="click_to_sign_up">Press to sign up!</string>
    <string name="prompt_email" translatable="false">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="vk">VK</string>
    <string name="title_sign_up">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_surname">Surname</string>
    <string name="nav_news">News</string>
    <string name="nav_recommend">Recommendations</string>
    <string name="nav_answers">Answers</string>
    <string name="nav_profile">Profile</string>

    <string name="profile_image">Profile image</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_username" translatable="false">Name Username</string>
    <string name="prompt_commentaries">Commentaries</string>
    <string name="add_event_to_calendar">Add event to calendar</string>
    <string name="create_post">Create post</string>
    <string name="subscribe">+ Subscribe</string>
    <string name="unsubscribe">- Unsubscribe</string>
    <string name="my_comments">My comments</string>
    <string name="log_out">Log out</string>
    <string name="reg_success">Registration successful</string>
    <string name="sign_in_another_way">Sign in another way</string>
    <string name="google" translatable="false">Google</string>
    <string name="empty_news">You don\'t have any news with your tags yet</string>
    <string name="empty_tags">You don\'t have any tags yet</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="enter_your_tags_here">Enter your tags here</string>
    <string name="add_attachments">Add attachments</string>
    <string name="create">Create</string>
    <string name="answer">Answer</string>
    <string name="enter_comment">Enter comment</string>
    <string name="enter_link">Enter link</string>
    <string name="send">Send</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit profile</string>
    <string name="search_hint">Search</string>
    <string name="show_expanded_tags_list">Show expanded tags list</string>
    <string name="image_change_success">User profile photo successfully changed</string>
    <string name="image_change_fail">User profile photo changing encountered errors</string>
    <string name="click_profile_image">Click profile photo to change it</string>
    <string name="attachment">Attachment</string>
    <string name="attach_image">Image</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_link">Link</string>
    <string name="attachment_type">Attachment type</string>
    <string name="remove_attachment">Do not attach</string>
    <string name="play_button">Play button</string>
    <string name="download_file">Download file</string>
    <string name="link_placeholder" translatable="false">http://example.com/example</string>

    <string name="error_upload_file">Error uploading file</string>
    <string name="error_empty_fields">Some fields are empty!</string>
    <string name="error_empty_tags">Enter some tags</string>
    <string name="error_empty_text">Enter some text</string>
    <string name="error_no_search">No results found</string>
    <string name="error_empty_username">Enter username!</string>
    <string name="error_empty_email">Enter email!</string>
    <string name="error_empty_password">Enter password!</string>
    <string name="error_different_passwords">Passwords are different</string>
    <string name="error_wrong_password">Password is must contain min 8 characters, at 1 uppercase letter, 1 lowercase letter, 1 number and 1 special symbol!</string>
    <string name="error_wrong_email">Invalid email!</string>
    <string name="error_empty_name">Enter name</string>
    <string name="error_empty_surname">Enter surname</string>
    <string name="error_login_data">Invalid e-mail or password</string>
    <string name="error_email_exists">E-mail already taken</string>
    <string name="error_server_not_responding">Server is not responding</string>
    <string name="error_link_not_correct">Your link is not correct</string>
</resources>
