<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small"
    tools:context=".ui.CreatePostActivity">

    <EditText
        android:id="@+id/et_text"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:lines="5"
        android:gravity="top|start"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:hint="@string/type_your_text_here"/>

    <EditText
        android:id="@+id/et_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_tags_here"
        android:gravity="top|start"
        android:inputType="text"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@null"
        android:layout_below="@id/et_text"/>

    <ImageButton
        android:id="@+id/btn_attach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_tag"
        android:background="@null"
        android:contentDescription="@string/add_attachments"
        android:src="@drawable/ic_attachment"/>

    <Button
        android:id="@+id/btn_create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_tag"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/create"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>