<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_author_image"
                android:layout_width="@dimen/profile_image_size_small"
                android:layout_height="@dimen/profile_image_size_small"
                android:layout_margin="@dimen/margin_medium"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile_image"/>

            <TextView
                android:id="@+id/tv_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_author_image"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/colorTextLink"
                android:textStyle="bold"
                android:textSize="@dimen/text_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/prompt_username"/>

            <TextView
                android:id="@+id/tv_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_author_name"
                android:layout_toEndOf="@id/iv_author_image"
                android:layout_marginTop="@dimen/margin_small"
                tools:text="dasdasdasdas"/>

            <TextView
                android:id="@+id/tv_text"
                android:layout_below="@id/iv_author_image"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test data for post sfdgdfgdfgdfsg dfgfd dfas fsdafsd fsafsdaf fdsafsdafsdf sdfsdafsdfsdf sdfsdfsdfsdfsadfsda sdfsdafsdafsdafas fasdfasdfas fasgadfgsdfhhgf"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_below="@id/tv_tags"
                android:textSize="@dimen/text_medium"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/btn_event"
                android:text="Add event: 17 03 2018"/>

            <TextView
                android:id="@+id/tv_tags"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorTextLink"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="#tag1 #tag2 #test123"
                android:layout_below="@id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

          <!--style="?android:attr/buttonBarButtonStyle"-->

            <ImageButton
                android:id="@+id/btn_comments"
                android:layout_below="@id/tv_tags"
                android:src="@drawable/ic_comments"
                android:background="@null"
                android:contentDescription="@string/prompt_commentaries"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/btn_event"
                android:contentDescription="@string/add_event_to_calendar"
                android:src="@drawable/ic_event"
                android:background="@null"
                android:layout_below="@id/tv_tags"
                android:layout_toEndOf="@id/btn_comments"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>