<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/popup_calendar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBlackTransparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:background="@color/white"
        android:layout_margin="@dimen/margin_medium"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_calendar"
                android:text="@string/add_event_to_calendar"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:textSize="@dimen/text_large"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_below="@id/tv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/colorTextDark"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                tools:text="sdfzbxvcbzcvbxcvbxcv xcbvcxbxvcbcvx"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description"
                android:textSize="@dimen/text_large"
                android:textColor="@color/colorTextDark"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:layout_alignParentEnd="true"
                tools:text="13.11.2018"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_below="@id/tv_date"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_large"
                android:paddingStart="@dimen/padding_xlarge"
                android:paddingEnd="@dimen/padding_xlarge"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/ok"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_below="@id/tv_date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:paddingStart="@dimen/padding_xlarge"
                android:paddingEnd="@dimen/padding_xlarge"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>